# beegone

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js
.github/workflows/: image.yml
beegone/: .rustfmt.toml  Cargo.toml
beegone-js/: package.json
beegone-js/src/: beegone.d.ts  beegone.js  beegone_bg.js  beegone_bg.wasm  beegone_bg.wasm.d.ts  types.d.ts
beegone/src/: action.rs  board.rs  error.rs  id.rs  iter.rs  lib.rs  piece.rs  pos.rs  state.rs  wasm.rs
beegone/src/domain/: action.rs  board.rs  mod.rs  piece.rs  pos.rs  state.rs
beegone/src/inbound/wasm/: action.rs  bee.rs  board.rs  color.rs  error.rs  mod.rs  piece.rs  pos.rs  species.rs  state.rs  types.rs
beegone/src/player/: computer.rs  local.rs  mod.rs
beegone_front_end/: package-lock.json  package.json  vite.config.ts
beegone_front_end/src/components/: ActionButton.svelte  ActionButtonGroup.svelte  Hexagon.svelte  PieceComponent.svelte  Tile.svelte  Token.svelte
beegone_front_end/src/model/: model.ts
beegone_front_end/src/routes/: +page.svelte
beegone_front_end/src/stores/: state.ts
beegone_front_end/src/utils/: polygon.ts
front-end/: deno.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
front-end/src/: app.css  app.html  worker-configuration.d.ts
front-end/src/lib/: assert-never.ts  (+1 more)
front_end/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/components/: Hexagon.svelte  PieceComponent.svelte
src/model/: model.ts
src/routes/: +page.svelte
(+80 files in other folders)
