[package]
name = "beegone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
rival = { git = "https://github.com/Tortoaster/rival.git", rev = "e26c120" }
serde = { version = "1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
tokio = { version = "1.32.0", features = ["time"] }
typeshare = "1.0.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.37"

# Minimize binary size, but with speed optimizations
[profile.release]
codegen-units = 1
# lto = true
opt-level = 3
# panic = "abort"
strip = true
