[package]
name = "beegone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rival = { git = "https://github.com/Tortoaster/rival.git", rev = "e26c120" }
thiserror = "2.0.12"
tokio = { version = "1.32.0", features = ["time"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.37"

[profile.release]
codegen-units = 1
opt-level = "s"
