[package]
name = "beegone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"

[profile.release]
codegen-units = 1
opt-level = "s"
